[gd_scene load_steps=11 format=2]

[ext_resource path="res://TheDiver.gd" type="Script" id=1]
[ext_resource path="res://Resources/CircleLight.png" type="Texture" id=2]
[ext_resource path="res://Resources/LightMask.png" type="Texture" id=3]
[ext_resource path="res://Camera.gd" type="Script" id=4]
[ext_resource path="res://Resources/sprite_0.png" type="Texture" id=5]
[ext_resource path="res://Resources/sprite_2.png" type="Texture" id=6]
[ext_resource path="res://Resources/sprite_1.png" type="Texture" id=7]
[ext_resource path="res://BlowTorch.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[node name="TheDiver" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
offset = Vector2( -23, -33 )
polygon = PoolVector2Array( 15, 22, 15, 52, 31, 52, 31, 31, 34, 31, 34, 27, 31, 27, 31, 22, 24, 19, 29, 8, 23, 11, 17, 8, 22, 19 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -5, -18 )
polygon = PoolVector2Array( -1, -7, 5, -4, 11, -7, 6, 4, 13, 7, 13, 37, -3, 37, -3, 7, 4, 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 3.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 0.5
energy = 1.3
range_z_min = 0
range_z_max = 0
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 3
shadow_filter_smooth = 6.0

[node name="Light2D2" type="Light2D" parent="."]
texture = ExtResource( 2 )
texture_scale = 0.25
energy = 0.9
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 100 )

[node name="Hand" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hand"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Hand"]
rotation = -0.523599
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 2 )
frame = 1
playing = true
offset = Vector2( 0, 5 )
flip_h = true
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Hand"]
texture = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="Hand" to="." method="_on_Hand_area_entered"]
[connection signal="area_exited" from="Hand" to="." method="_on_Hand_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
